Fix spacing

--- a/src/AppViewLite.Web/wwwroot/app.css
+++ b/src/AppViewLite.Web/wwwroot/app.css
@@ -1808,6 +1808,7 @@ h1 .profile-badge img{
     padding: 2px 10px 4px 10px;
     font-size: 10pt;
     margin-bottom: 2px;
+    margin-right: 1px;
 }
 
 .profile-labels{
